@startuml

title __MUSALASOFTPROJECT's Class Diagram__\n

  namespace clientserver {
    class clientserver.Client {
    }
  }
  

  namespace clientserver {
    class clientserver.ClientApp {
    }
  }
  

  namespace clientserver {
    class clientserver.ClientHandler {
    }
  }
  

  namespace clientserver {
    class clientserver.Menu {
    }
  }
  

  namespace clientserver {
    class clientserver.ServerApp {
    }
  }
  

  namespace database {
    abstract class database.DatabaseAccess {
    }
  }
  

  namespace database {
    class database.TaskDAO {
    }
  }
  

  namespace database {
    class database.UserDAO {
    }
  }
  

  namespace entities {
    class entities.BasicTask {
    }
  }
  

  namespace entities {
    interface entities.DAO {
    }
  }
  

  namespace entities {
    enum Priority {
    }
  }
  

  namespace entities {
    interface entities.Task {
    }
  }
  

  namespace entities {
    class entities.User {
    }
  }
  

  clientserver.ClientHandler o-- entities.User : currentUser
  database.TaskDAO .up.|> entities.DAO
  database.TaskDAO -up-|> database.DatabaseAccess
  database.TaskDAO o-- entities.User : user
  database.UserDAO .up.|> entities.DAO
  database.UserDAO -up-|> database.DatabaseAccess
  database.UserDAO o-- entities.User : user
  entities.BasicTask .up.|> entities.Task
  entities.BasicTask o-- entities.Priority : priority


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
